[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# itertools = "0.12.0"


[[bin]]
name = "day01"
path = "solutions/day01/day01.rs"

[[bin]]
name = "day02"
path = "solutions/day02/day02.rs"

[[bin]]
name = "day04"
path = "solutions/day04/day04.rs"

[[bin]]
name = "day05"
path = "solutions/day05/day05.rs"

[[bin]]
name = "day06"
path = "solutions/day06/day06.rs"

